--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ services:
     container_name: wynajem_php
     image: dunglas/frankenphp
     # uncomment the following line if you want to use a custom Dockerfile
-    #build: .
+    build: .
     # uncomment the following line if you want to run this in a production environment
     # restart: always
     ports:
@@ -15,6 +15,25 @@ services:
       - caddy_config:/config
     # comment the following line in production, it allows to have nice human-readable logs in dev
     tty: true
+    networks:
+      - wynajem_network
+
+  mysql:
+    container_name: wynajem_mysql
+    image: mysql
+    environment:
+      MYSQL_USER: wynajem
+      MYSQL_PASSWORD: wynajem
+      MYSQL_DATABASE: wynajem
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - 3306:3306
+    networks:
+      - wynajem_network
+
+networks:
+  wynajem_network:
+    name: wynajem_network
 
 # Volumes needed for Caddy certificates and configuration
 volumes:
